# vitsy-ng

./: Cargo.toml
compiler/: Cargo.toml
emulator/: Cargo.toml
emulator/src/: lib.rs
examples/: quine.vt
parser/: Cargo.toml
parser/src/: enrich.rs  lib.rs  parse.rs  test.rs
src/: main.rs
