[package]
name = "vitsy-ng"
version = "0.1.0"
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jit = ["compiler"]
emulation = ["emulator"]

[dependencies]
compiler = { path = "compiler", package = "vitsy-compiler", optional = true }
emulator = { path = "emulator", package = "vitsy-emulator", optional = true }

[workspace]
members = [
    "compiler",
    "emulator",
    "parser"
]