[package]
name = "vitsy-emulator"
version = "0.1.0"
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Boa = "0.6.0"
rug = "1.7.0"
parser = { path = "../parser", package = "vitsy-parser" }
